--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Run tests
       run: |
-        python -m unittest discover tests
+        python test.py
 
     - name: Run application
       run: |
